# mono-nir-calib-manual

./: CMakeLists.txt  README.md  package.xml
cfg/: mono_nir_calib_cfg.cfg
launch/: checkerboard_basler_calib_manual.launch  mono_nir_calib_manual.launch
src/: checkerboard_basler_publish.cpp  mono_nir_publish.cpp
